2000-06-18  Per Bothner  <per@bothner.com>

	* misc-test.scm:  New tests for make-procedure and properties.

2000-06-09  Per Bothner  <per@bothner.com>

	* Makefile.am (check1):  Always at least compile scribbe.scm.

2000-06-09  Bruce Lewis  <brlewis@alum.mit.edu>

	* misc-test.scm:  Two new read-line tests.

2000-05-28  Per Bothner  <per@bothner.com>

	* Makefile.am (check-ppfile):  New test, for slib/ppfile.scm.
	* ppfile.out:  New file - expected output from ppfile.

	* misc-test.scm (test-alias-5):  New testcase.

	* num-test.scm:  Added two gcd regression tests.

2000-04-14  Per Bothner  <per@bothner.com>

	* obj-test.scm: Added 4 tests for record with names that need mangling.

2000-02-29  Per Bothner  <per@bothner.com>

	* misc-test.scm (test-nesting-3):  New test, triggers bug reported
	by Bruce R. Lewis; now fixed.

2000-02-25  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Added two more tests for #!optional.

2000-02-12  Per Bothner  <per@bothner.com>

	* scribble.scm:  New "applet" testcase.
	* scribble.html:  Web page that uses scribble applet.
	* Makefile.am (scribble.class, check-scribble):  New rules.

2000-01-23  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Added tests for call-with-values and values.

2000-01-22  Per Bothner  <per@bothner.com>

	* testing.scm (setion):  Return implied #!void rather than #t.

1999-12-11  Per Bothner  <per@bothner.com>

	* misc-test.scm:  New test for fluid-let, from bug reported by
	Walter C. Pelissero <wcp@lpds.sublink.org> 1999-12-10.

1999-11-28  Per Bothner  <per@bothner.com>

	* misc-test.scm:  Various tests for variable lookup, inlining,
	recursion and similar nasty stuff. Based on bug
	reports from Walter C. Pelissero <wcp@lpds.sublink.org>.

1999-11-18  Per Bothner  <per@bothner.com>

	* testing.scm:  Remove save-+ kludge.  No longer needed, now that +
	is "inlined" (actually just resolved by the compiler).

1999-11-16  Per Bothner  <per@bothner.com>
